storage/ndb/mcc/frontend/dojo/dojo/tests/unit/errors/all.js
define([
    './create',
    './CancelError',
    './RequestError',
    './RequestTimeoutError'
], function () {});
